[gd_scene load_steps=15 format=2]

[ext_resource path="res://ivoyager/gui_mods/panel_lock_visible_ckbx.tscn" type="PackedScene" id=1]
[ext_resource path="res://ivoyager/gui_mods/container_draggable.tscn" type="PackedScene" id=2]
[ext_resource path="res://ivoyager/gui_widgets/date_time_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://ivoyager/gui_widgets/speed_buttons.tscn" type="PackedScene" id=4]
[ext_resource path="res://planetarium/gui/pltm_info_panel.gd" type="Script" id=5]
[ext_resource path="res://ivoyager/gui_widgets/range_label.tscn" type="PackedScene" id=6]
[ext_resource path="res://ivoyager/gui_widgets/view_buttons.tscn" type="PackedScene" id=7]
[ext_resource path="res://ivoyager/gui_widgets/lat_long_label.tscn" type="PackedScene" id=8]
[ext_resource path="res://ivoyager/gui_widgets/track_orbit_ground_ckbxs.tscn" type="PackedScene" id=9]
[ext_resource path="res://ivoyager/gui_widgets/selection_wiki_link.tscn" type="PackedScene" id=10]
[ext_resource path="res://ivoyager/gui_widgets/focal_length_label.tscn" type="PackedScene" id=11]
[ext_resource path="res://ivoyager/gui_widgets/focal_length_buttons.tscn" type="PackedScene" id=12]
[ext_resource path="res://ivoyager/gui_widgets/selection_data.tscn" type="PackedScene" id=13]
[ext_resource path="res://ivoyager/gui_widgets/present_time_ckbx.tscn" type="PackedScene" id=14]

[node name="PltmInfoPanel" type="PanelContainer"]
margin_right = 334.0
margin_bottom = 480.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 467.0
margin_bottom = 473.0
mouse_filter = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 456.0

[node name="HBox1" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_right = 425.0
margin_bottom = 24.0

[node name="DateTimeLabel" parent="MarginContainer/VBox/HBox1" instance=ExtResource( 3 )]
margin_right = 164.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
valign = 1

[node name="PresentTimeCkbx" parent="MarginContainer/VBox/HBox1" instance=ExtResource( 14 )]
margin_left = 168.0
margin_right = 326.0

[node name="SpeedButtons" parent="MarginContainer/VBox/HBox1" instance=ExtResource( 4 )]
margin_left = 330.0
margin_top = 2.0
margin_right = 425.0
margin_bottom = 22.0

[node name="Spacer1" type="Control" parent="MarginContainer/VBox"]
margin_top = 28.0
margin_right = 425.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 12 )

[node name="HBox2" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_top = 44.0
margin_right = 425.0
margin_bottom = 194.0

[node name="SelectionWikiLink" parent="MarginContainer/VBox/HBox2" instance=ExtResource( 10 )]
margin_top = 0.0
margin_right = 0.0
margin_bottom = 150.0

[node name="ViewButtons" parent="MarginContainer/VBox/HBox2" instance=ExtResource( 7 )]
margin_left = 4.0
margin_top = 65.0
margin_right = 345.0
margin_bottom = 85.0

[node name="HBox3" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_top = 198.0
margin_right = 425.0
margin_bottom = 218.0

[node name="RangeLabel" parent="MarginContainer/VBox/HBox3" instance=ExtResource( 6 )]
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
valign = 1

[node name="FocalLengthLabel" parent="MarginContainer/VBox/HBox3" instance=ExtResource( 11 )]
margin_left = 334.0
margin_top = 3.0
margin_right = 380.0
margin_bottom = 17.0

[node name="FocalLengthButtons" parent="MarginContainer/VBox/HBox3" instance=ExtResource( 12 )]
margin_left = 384.0
margin_top = 0.0
margin_right = 425.0
margin_bottom = 20.0

[node name="HBox4" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_top = 222.0
margin_right = 425.0
margin_bottom = 246.0

[node name="LatLongLabel" parent="MarginContainer/VBox/HBox4" instance=ExtResource( 8 )]
margin_top = 5.0
margin_right = 0.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="TrackOrbitGroudCkbxs" parent="MarginContainer/VBox/HBox4" instance=ExtResource( 9 )]
margin_left = 4.0
margin_right = 425.0
margin_bottom = 24.0

[node name="Spacer2" type="Control" parent="MarginContainer/VBox"]
margin_top = 250.0
margin_right = 425.0
margin_bottom = 262.0
rect_min_size = Vector2( 0, 12 )

[node name="DataScroll" type="ScrollContainer" parent="MarginContainer/VBox"]
margin_top = 266.0
margin_right = 425.0
margin_bottom = 446.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SelectionData" parent="MarginContainer/VBox/DataScroll" instance=ExtResource( 13 )]
margin_right = 425.0

[node name="PanelLockVisibleCkbx" parent="." instance=ExtResource( 1 )]
margin_left = 443.0
margin_top = 7.0
margin_right = 467.0
margin_bottom = 31.0

[node name="ContainerDraggable" parent="." instance=ExtResource( 2 )]
